fix: explore sidebar cube name horizontal scroll

--- a/src/components/ExploreCubes/index.module.less
+++ b/src/components/ExploreCubes/index.module.less
@@ -152,3 +152,10 @@
 .freeMembers {
   margin-top: 2px;
 }
+
+.optionHeader {
+  max-width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
